examples/test/testpolicy8969.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8969
  namespace: namespace106
spec:
  podSelector:
    matchLabels:
      key25: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value5
          key49: value36
          key14: value40
      podSelector:
        matchLabels:
          key3: value42
          key39: value14
          key31: value7
